# laserdocklib

./: .gitignore  CMakeLists.txt  FindLibUSB.cmake  LaserdockDevice.cpp  LaserdockDevice.h  LaserdockDeviceManager.cpp  LaserdockDeviceManager.h  README.md  dist.local.android.cmake  dist.local.cmake  funcpointers.cpp  hexDump.cpp  laserdockdevicemanagertest.cpp  laserdocklibcircle.cpp  main.cpp  runnertest.cpp
lib/: CMakeLists.txt  JavaUsbDeviceHelper.cpp  JavaUsbDeviceHelper.h  LaserdockDevice.cpp  LaserdockDevice.h  LaserdockDeviceManager.cpp  LaserdockDeviceManager.h  LaserdockDeviceManager_android.cpp  LaserdockDeviceManager_desktop.cpp  LaserdockDevice_android.cpp  LaserdockDevice_desktop.cpp
lib/include/laserdocklib/: LaserdockDevice.h  LaserdockDeviceManager.h
lib/java/com/wickedlasers/laserdocklib/: UsbDeviceHelper.java
lib/src/: LaserdockDevice.cpp  LaserdockDeviceManager.cpp  LaserdockDeviceManager_desktop.cpp  LaserdockDeviceManager_p.h  LaserdockDevice_p.h
qt-android-cmake/: AddQtAndroidApk.cmake
qt-android-cmake/toolchain/: android.toolchain.cmake
tests/: CMakeLists.txt  laserdockdevicemanagertest.cpp  laserdocklibcircle.cpp  main.cpp  runnertest.cpp
